#73 Add sum field to financeaccounts web report

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/panels/report/FinanceAccountsPanel.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/panels/report/FinanceAccountsPanel.html
@@ -69,6 +69,16 @@
                 </tr>
             </span>
             <tr>
+                <td colspan="4"></td>
+                <td style="font-weight: bold; text-align: right">
+                    <wicket:message key="FinanceAccountsPage.sum"></wicket:message>
+                </td>
+                <td style="text-align: right">
+                    <span wicket:id="FinanceAccountsPage.sum"></span>
+                </td>
+                <td></td>
+            </tr>
+            <tr>
                 <td colspan="7"><br></td>
             </tr>
             <tr>
